--- a/game1.html
+++ b/game1.html
@@ -18,7 +18,7 @@
         <!-- 🌿 Existing Header Navigation -->
         <header>
             <nav>
-                <a href="index1.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="quiz1.html">Quiz</a>
                 <a href="game1.html">Recycling Game</a>
             </nav>
@@ -49,5 +49,6 @@
 
     <script src="script1.js"></script>
 </body>
+
 
 </html>
