--- a/quiz1.html
+++ b/quiz1.html
@@ -20,7 +20,7 @@
         <!-- 🌿 Existing Header Navigation -->
         <header>
             <nav>
-                <a href="index1.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="quiz1.html">Quiz</a>
                 <a href="game1.html">Recycling Game</a>
             </nav>
@@ -45,5 +45,6 @@
 
     <script src="script1.js"></script>
 </body>
+
 
 </html>
