Fix duplicate body tag and clean HTML structure

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- 🌿 Existing Header Navigation -->
         <header>
             <nav>
-                <a href="index1.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="quiz1.html">Quiz</a>
                 <a href="game1.html">Recycling Game</a>
             </nav>
@@ -133,3 +133,4 @@
 
 
 </html>
+
