--- a/game1.html
+++ b/game1.html
@@ -4,6 +4,15 @@
 <head>
     <title>Recycling Game</title>
     <link rel="stylesheet" href="style1.css">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-B8NG6MLK61"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-B8NG6MLK61');
+</script>
 </head>
 
 <body>
@@ -52,3 +61,4 @@
 
 
 </html>
+
