--- a/game1.html
+++ b/game1.html
@@ -4,41 +4,34 @@
 <head>
     <title>Recycling Game</title>
     <link rel="stylesheet" href="style1.css">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-B8NG6MLK61"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
 
-  gtag('config', 'G-B8NG6MLK61');
-</script>
+    <!-- Google tag -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B8NG6MLK61"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'G-B8NG6MLK61');
+    </script>
 </head>
 
 <body>
 
-    <body>
+    <!-- 🌿 Banner Image -->
+    <div class="banner">
+        <img src="Pictures/header banner.png" alt="Eco Banner">
+    </div>
 
-        <!-- 🌿 Banner Image ABOVE Header -->
-        <div class="banner">
-            <img src="Pictures/header banner.png" alt="Eco Banner">
-        </div>
+    <!-- 🌿 Header Navigation -->
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="quiz1.html">Quiz</a>
+            <a href="game1.html">Recycling Game</a>
+        </nav>
+    </header>
 
-        <!-- 🌿 Existing Header Navigation -->
-        <header>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="quiz1.html">Quiz</a>
-                <a href="game1.html">Recycling Game</a>
-            </nav>
-        </header>
-
-        <section class="content">
-            <!-- your content here -->
-        </section>
-
-    </body>
-
+    <!-- 🌿 Game Content -->
     <section class="content">
         <h2>♻ Recycling Sorting Game</h2>
 
@@ -57,8 +50,9 @@
     </section>
 
     <script src="script1.js"></script>
+
 </body>
-
-
 </html>
+
+
 
